--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,6 @@
 .active__link {
-    text-decoration: underline;
+    padding: 7px 12px;
+    background: red;
+    color: #fff;
+    border-radius: 7px;
 }
